k8s/namespace.yml
# namespace definition for the constant-tracker application
kind: Namespace
apiVersion: v1
metadata:
    name: constant-tracker
